# enterpreneaur-copilot

./: .env  .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  ui.py
src/crew/: __init__.py  ene_crew.py  main.py
src/crew/config/: agents.yaml  tasks.yaml
src/crew/tools/: websearch.py
