[project]
name = "crew"
version = "0.1.0"
description = "Entrepreneurship Copilot - AI-powered business planning assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.28.8",
    "crewai-tools>=0.1.6",
    "langchain-community>=0.0.29",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "pysqlite3-binary == 0.5.4",
]
